🚀 Versión 1.0 - Sistema Completo de Gestión Freshdesk
✨ NUEVAS FUNCIONALIDADES:
• 📊 Reporte de productos diferentes entre Freshdesk y Clarity
• 📚 Guía de usuario interactiva con 7 secciones completas
• 🔄 Rotación automática de logs (30 días de retención)
• 📧 Sistema de soporte con email de contacto

🛠️ MEJORAS TÉCNICAS:
• Corrección de importaciones circulares
• Manejo robusto de entornos sin GUI
• Distinción clara de dos tipos de archivos Freshdesk
• Confirmaciones de finalización en todos los procesos

🎨 EXPERIENCIA DE USUARIO:
• Interfaz consistente con emojis y formato claro
• Barras de progreso en procesos largos
• Mensajes de confirmación para acciones críticas
• Limpieza automática de pantalla entre menús

🔒 SEGURIDAD:
• Código libre de datos sensibles
• Configuración volátil (no persiste credenciales)
• Logs con información técnica sin datos críticos

📁 ESTRUCTURA:
• Proyecto listo para distribución con PyInstaller
• Logs en carpeta local junto al ejecutable
• Documentación completa integrada en la aplicación

--- a/data/config/freshdesk_config.json
+++ b/data/config/freshdesk_config.json
@@ -1,7 +1,7 @@
 {
-    "api_key": "4MAG0b1h3Qka8wNDjPG",
-    "freshdesk_domain": "https://tdilatam.freshdesk.com",
-    "clarity_username": "matias.ruibal.cw",
-    "clarity_password": "Clarity925",
-    "clarity_domain": "https://pmservice.tdilatam.com:8043/ppm/rest/v1"
+    "api_key": "",
+    "freshdesk_domain": "",
+    "clarity_username": "",
+    "clarity_password": "",
+    "clarity_domain": ""
 }
